# antennaAuto

./: .env  .gitignore  README.md  main.py  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
docs/: current_extraction_pipeline_detailed_qa.md  extraction_agent_mvp.md  implemented_so_far.md  retrieval_baseline_current.json  retrieval_baseline_current.md  retrieval_comparison_summary.md  retrieval_default_baseline_confirmation.md  retrieval_paragraph_only.json  retrieval_paragraph_only.md  retrieval_paragraph_real_embedding.json  retrieval_paragraph_real_embedding.md  retrieval_paragraph_real_embedding_rrf.json  retrieval_paragraph_real_embedding_rrf.md  retrieval_paragraph_rrf.json  retrieval_paragraph_rrf.md  retrieval_test_commands_and_results.md
reports/: pytest_indexing.xml
runs/run_20260402T082918849070Z/bundle/: fulltext.md  metadata.json
scripts/: run_phase1_validation.py
src/antennaauto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mvp/: __init__.py  benchmark.py  bundle.py  cli.py  config.py  extract.py  index.py  parsers.py  pipeline.py  retrieval.py  semantic_roles.py  utils.py
src/mvp/extraction/: __init__.py  (+3 more)
tests/: docling_test_stubs.py  test_canonical_design_record.py  test_extract_cli.py  test_extraction_agent.py  test_extraction_pipeline.py  test_extraction_prompting.py  test_extraction_schema.py  test_indexing.py  test_ingestion.py  test_interpretation_pipeline.py  test_interpretation_prompting.py  test_interpretation_schema.py  test_llm_client.py  test_parsers.py  test_parsing.py  test_retrieval.py
(+255 files in other folders)
