[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "antennaauto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.90.0",
    "faiss-cpu>=1.8.0",
    "grobid-client-python>=0.1.4",
    "numpy>=2.0.0",
    "openai>=1.30.0",
    "openai-agents>=0.13.6",
    "pydantic>=2.8.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "sentence-transformers>=3.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
